--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -177,6 +177,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   update-repo-db:
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     needs: build-linux
     runs-on: ubuntu-24.04
     steps:
@@ -244,3 +245,43 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
           publish_dir: ./pacman-repo
+
+  comment-on-pr:
+    if: github.event_name == 'pull_request'
+    needs: [build-linux]
+    runs-on: ubuntu-24.04
+    permissions:
+      pull-requests: write
+    steps:
+      - name: Download pacman-repo artifacts
+        uses: actions/download-artifact@v4
+        with:
+          pattern: pacman-repo-*
+          path: ./pacman-repo
+          merge-multiple: false
+
+      - name: Format artifact links
+        id: format_links
+        run: |
+          echo "Preparing PR comment..."
+
+          MSG="### 🔗 Batocode Arcade Test Builds for PR #${{ github.event.pull_request.number }}\n"
+          for arch in x86_64 aarch64; do
+            # Use wildcard for the tarball (it won't be in pacman-repo)
+            TAR_URL="https://nightly.link/${{ github.repository }}/actions/runs/${{ github.run_id }}/batocode-arcade-*-${arch}-release.tar.gz"
+            
+            ZST_FILE=$(ls pacman-repo/pacman-repo-$arch/*.pkg.tar.zst | head -n1 | xargs basename)
+            ZST_URL="https://nightly.link/${{ github.repository }}/actions/runs/${{ github.run_id }}/$ZST_FILE"
+
+            MSG+="\n**🖥️ Architecture:** \`${arch}\`\n"
+            MSG+="- [🗜️ Release Tarball (.tar.gz)]($TAR_URL)\n"
+            MSG+="- [📦 Pacman Package (.pkg.tar.zst)]($ZST_URL)\n"
+          done
+
+          echo -e "$MSG" > pr-comment.txt
+
+      - name: Post or update comment on PR
+        uses: marocchino/sticky-pull-request-comment@v2
+        with:
+          header: batocode-arcade-artifacts
+          path: pr-comment.txt
