--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -170,6 +170,7 @@ jobs:
           path: pacman-repo/*
 
       - name: Upload Linux binaries to release (create or update)
+        if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v2
         with:
           files: batocode-arcade-${{ steps.prepare_package.outputs.version_with_rel }}-${{ steps.prepare_package.outputs.pkg_arch }}-release.tar.gz
@@ -268,14 +269,14 @@ jobs:
           MSG="### 🔗 Batocode Arcade Test Builds for PR #${{ github.event.pull_request.number }}\n"
           for arch in x86_64 aarch64; do
             # Use wildcard for the tarball (it won't be in pacman-repo)
-            TAR_URL="https://nightly.link/${{ github.repository }}/actions/runs/${{ github.run_id }}/batocode-arcade-*-${arch}-release.tar.gz"
+            TAR_URL="https://nightly.link/${{ github.repository }}/actions/runs/${{ github.run_id }}/batocode-arcade-*-${arch}-test.tar.gz"
             
             ZST_FILE=$(ls pacman-repo/pacman-repo-$arch/*.pkg.tar.zst | head -n1 | xargs basename)
             ZST_URL="https://nightly.link/${{ github.repository }}/actions/runs/${{ github.run_id }}/$ZST_FILE"
 
             MSG+="\n**🖥️ Architecture:** \`${arch}\`\n"
-            MSG+="- [🗜️ Release Tarball (.tar.gz)]($TAR_URL)\n"
-            MSG+="- [📦 Pacman Package (.pkg.tar.zst)]($ZST_URL)\n"
+            MSG+="- [🗜️ Test Tarball (.tar.gz)]($TAR_URL)\n"
+            MSG+="- [📦 Test Pacman Package (.pkg.tar.zst)]($ZST_URL)\n"
           done
 
           echo -e "$MSG" > pr-comment.txt
