--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -1,12 +1,8 @@
 name: Build Linux Release
 
 on:
-  push:
-    tags:
-      - 'v*'
   pull_request:
     branches:
-      - main
       - develop
 
 jobs:
@@ -14,7 +10,6 @@ jobs:
     runs-on: ubuntu-24.04
     permissions:
       contents: write
-      pages: write
       id-token: write
 
     strategy:
@@ -117,13 +112,6 @@ jobs:
 
           PKGINFO
 
-          dos2unix "$PKG_ROOT/.PKGINFO"
-
-          # Set directory permissions to match Batocera (0777) to avoid pacman warnings
-          chmod 0777 "$PKG_ROOT/userdata"
-          chmod 0777 "$PKG_ROOT/userdata/roms"
-          chmod -R 0777 "$PKG_ROOT/userdata/roms/ports"
-
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           echo "version_with_rel=$VERSION_WITH_REL" >> $GITHUB_OUTPUT
           echo "pkg_arch=$PKG_ARCH" >> $GITHUB_OUTPUT
@@ -152,9 +140,6 @@ jobs:
           cp "$PKG_FILE" pacman-repo/
           echo "pkg_file=$PWD/$PKG_FILE" >> $GITHUB_OUTPUT
 
-      - name: Set ownership to root:root (after package creation)
-        run: sudo chown -R 0:0 ${{ steps.prepare_package.outputs.pkg_root }}
-
       - name: Package Linux release tarball
         run: |
           VERSION_WITH_REL="${{ steps.prepare_package.outputs.version_with_rel }}"
@@ -164,21 +149,13 @@ jobs:
           echo "release_tarball=batocode-arcade-${VERSION_WITH_REL}-${PKG_ARCH}-release.tar.gz" >> $GITHUB_OUTPUT
 
       - name: Upload pacman repo artifacts for this arch
-        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
         uses: actions/upload-artifact@v4
         with:
           name: pacman-repo-${{ matrix.arch }}
           path: pacman-repo/*
 
-      - name: Upload PR-only flat artifact for nightly.link
-        if: github.event_name == 'pull_request'
-        uses: actions/upload-artifact@v4
-        with:
-          name: pacman-flat-${{ matrix.arch }}
-          path: pacman-repo/*.pkg.tar.zst
-
       - name: Upload Linux binaries to release (create or update)
-        if: startsWith(github.ref, 'refs/tags/')
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
         uses: softprops/action-gh-release@v2
         with:
           files: batocode-arcade-${{ steps.prepare_package.outputs.version_with_rel }}-${{ steps.prepare_package.outputs.pkg_arch }}-release.tar.gz
@@ -186,7 +163,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   update-repo-db:
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     needs: build-linux
     runs-on: ubuntu-24.04
     steps:
@@ -232,63 +208,43 @@ jobs:
             repo-db-aarch64/*
             repo-db-x86_64/*
 
-  deploy-repo:
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+  comment-on-pr:
     needs: update-repo-db
     runs-on: ubuntu-24.04
     steps:
-      - name: Download pacman repo dbs
+      - name: Download pacman repo and release tarballs
         uses: actions/download-artifact@v4
         with:
           name: pacman-repo-final
-          path: ./pacman-repo
+          path: ./release-artifacts
 
-      - name: Add .nojekyll to both repos
-        run: |
-          touch ./pacman-repo/repo-db-aarch64/.nojekyll
-          touch ./pacman-repo/repo-db-x86_64/.nojekyll
-
-      - name: Deploy Pacman Repos to GitHub Pages (per-arch folders)
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: gh-pages
-          publish_dir: ./pacman-repo
-
-  comment-on-pr:
-    if: github.event_name == 'pull_request'
-    needs: [build-linux]
-    runs-on: ubuntu-24.04
-    permissions:
-      pull-requests: write
-    steps:
-      - name: Download flat pacman artifacts
+      - name: Download individual tarballs from build jobs
         uses: actions/download-artifact@v4
         with:
-          pattern: pacman-flat-*
-          path: ./pacman-flat
-          merge-multiple: false
+          path: ./release-artifacts
 
-      - name: Format artifact links
-        id: format_links
+      - name: List all available artifacts
+        run: ls -lhR ./release-artifacts
+
+      - name: Create PR comment content
+        id: create_comment
         run: |
-          echo "Preparing PR comment..."
-
-          MSG="### 🔗 Batocode Arcade Test Builds for PR #${{ github.event.pull_request.number }}\n"
-          for arch in x86_64 aarch64; do
-            TAR_URL="https://nightly.link/${{ github.repository }}/actions/runs/${{ github.run_id }}/batocode-arcade-*-${arch}-test.tar.gz"
-
-            ZST_FILE=$(ls pacman-flat/pacman-flat-$arch/*.pkg.tar.zst | head -n1 | xargs basename)
-            ZST_URL="https://nightly.link/${{ github.repository }}/actions/runs/${{ github.run_id }}/pacman-flat-${arch}/${ZST_FILE}"
-
-            MSG+="\n**🖥️ Architecture:** \`${arch}\`\n"
-            MSG+="- [🗜️ Test Tarball (.tar.gz)]($TAR_URL)\n"
-            MSG+="- [📦 Test Pacman Package (.pkg.tar.zst)]($ZST_URL)\n"
+          echo "### 🚀 Linux Builds Ready" > comment.md
+          echo "" >> comment.md
+          echo "**Pacman packages (.pkg.tar.zst)**:" >> comment.md
+          echo "- \`aarch64\`: [Download](./release-artifacts/repo-db-aarch64/ports-batocode-arcade-*.pkg.tar.zst)" >> comment.md
+          echo "- \`x86_64\`: [Download](./release-artifacts/repo-db-x86_64/ports-batocode-arcade-*.pkg.tar.zst)" >> comment.md
+          echo "" >> comment.md
+          echo "**Release tarballs (.tar.gz)**:" >> comment.md
+          find ./release-artifacts -type f -name "*.tar.gz" | while read file; do
+            fname=$(basename "$file")
+            echo "- [$fname](./release-artifacts/$(basename "$file"))" >> comment.md
           done
-          echo -e "$MSG" > pr-comment.txt
 
-      - name: Post or update comment on PR
-        uses: marocchino/sticky-pull-request-comment@v2
+      - name: Comment on the PR
+        uses: peter-evans/create-or-update-comment@v4
         with:
-          header: batocode-arcade-artifacts
-          path: pr-comment.txt
+          token: ${{ secrets.GITHUB_TOKEN }}
+          issue-number: ${{ github.event.pull_request.number }}
+          body-path: comment.md
+          edit-mode: replace
