--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Build Linux Release
+name: Build App forLinux ,  and Update Pacman Repo
 
 on:
   push:
@@ -6,152 +6,20 @@ on:
       - 'v*'
 
 jobs:
-  build-linux:
+  prepare-version:
     runs-on: ubuntu-24.04
-    permissions:
-      contents: write
-      pages: write
-      id-token: write
-
-    strategy:
-      matrix:
-        arch: [x86_64, aarch64]
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Strip the version
+        id: strip_version
+        run: echo "version=${GITHUB_REF_NAME#v}" >> $GITHUB_OUTPUT
+    outputs:
+      version: ${{ steps.strip_version.outputs.version }}
 
-      - name: Set up QEMU (for ARM emulation)
-        if: matrix.arch == 'aarch64'
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 22
-
-      - name: Install Node.js dependencies
-        run: npm ci
-
-      - name: Install Electron system dependencies
-        run: sudo apt-get update && sudo apt-get install -y libgtk-3-0 libx11-xcb1 libxcomposite1 libxdamage1 libxrandr2 libgbm1 libasound2t64
-
-      - name: Ensure dist folder exists
-        run: mkdir -p dist
-
-      - name: Build Linux ${{ matrix.arch }} package (unpacked)
-        run: |
-          if [[ "${{ matrix.arch }}" == "x86_64" ]]; then
-            npx electron-builder --linux --x64 --dir
-          elif [[ "${{ matrix.arch }}" == "aarch64" ]]; then
-            npx electron-builder --linux --arm64 --dir
-          else
-            echo "Unknown architecture: ${{ matrix.arch }}"
-            exit 1
-          fi
-
-      - name: Prepare package directory, media, and launcher script
-        id: prepare_package
-        run: |
-          set -e
-          VERSION="${GITHUB_REF_NAME#v}"
-          PKGREL="1"
-          VERSION_WITH_REL="${VERSION}-${PKGREL}"
-
-          if [[ "${{ matrix.arch }}" == "x86_64" ]]; then
-            SOURCE_UNPACKED_DIR="linux-unpacked"
-            PKG_ARCH="x86_64"
-          else
-            SOURCE_UNPACKED_DIR="linux-arm64-unpacked"
-            PKG_ARCH="aarch64"
-          fi
-
-          PKG_ROOT="batocera-pkg"
-          rm -rf "$PKG_ROOT"
-          mkdir -p "$PKG_ROOT"
-
-          PORTS_DIR="$PKG_ROOT/userdata/roms/ports"
-          GAME_DIR="$PORTS_DIR/batocode-arcade"
-          mkdir -p "$GAME_DIR"
-          mkdir -p "$PORTS_DIR/images"
-          mkdir -p "$PORTS_DIR/videos"
-
-          shopt -s dotglob
-          mv "dist/$SOURCE_UNPACKED_DIR"/* "$GAME_DIR/"
-          shopt -u dotglob
-          rmdir "dist/$SOURCE_UNPACKED_DIR"
-
-          cp pkgbuild/batocode-arcade.sh "$PKG_ROOT/userdata/roms/ports/batocode-arcade.sh"
-          chmod +x "$PKG_ROOT/userdata/roms/ports/batocode-arcade.sh"
-          cp pkgbuild/batocode-arcade.sh.keys "$PKG_ROOT/userdata/roms/ports/batocode-arcade.sh.keys"
-          cp pkgbuild/images/batocode-arcade-fanart.png "$PORTS_DIR/images/" || true
-          cp pkgbuild/images/batocode-arcade-image.png "$PORTS_DIR/images/" || true
-          cp pkgbuild/images/batocode-arcade-thumb.png "$PORTS_DIR/images/" || true
-          cp pkgbuild/images/batocode-arcade-marquee.png "$PORTS_DIR/images/" || true
-          cp pkgbuild/videos/batocode-arcade-video.mp4 "$PORTS_DIR/videos/" || true
-          cp pkgbuild/.BATOEXEC "$PKG_ROOT/.BATOEXEC"
-
-          cat <<PKGINFO > "$PKG_ROOT/.PKGINFO"
-          pkgname = ports-batocode-arcade
-          pkgver = $VERSION_WITH_REL
-          pkgdesc = A makecode arcade kiosk wrapper to run own created games inside Batocera
-          arch = $PKG_ARCH
-          group = sys-ports
-          packager = RAM Raiders
-          url = https://github.com/RAMRaiders/batocode-arcade
-
-          PKGINFO
-
-          # Set directory permissions to match Batocera (0777) to avoid pacman warnings
-          chmod 0777 "$PKG_ROOT"
-
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
-          echo "version_with_rel=$VERSION_WITH_REL" >> $GITHUB_OUTPUT
-          echo "pkg_arch=$PKG_ARCH" >> $GITHUB_OUTPUT
-          echo "pkg_root=$PKG_ROOT" >> $GITHUB_OUTPUT
-
-      - name: Create Batocera Pacman Package using batocera-makepkg
-        id: create_pacman_pkg
-        run: |
-          set -e
-          PKG_ROOT="${{ steps.prepare_package.outputs.pkg_root }}"
-          chmod +x pkgbuild/scripts/batocera-makepkg.sh
-
-          pushd "$PKG_ROOT"
-          bash "../pkgbuild/scripts/batocera-makepkg.sh"
-          popd
-
-          # Package is created one level up from $PKG_ROOT
-          PKG_FILE=$(ls -1 ports-batocode-arcade-*.pkg.tar.zst | head -n1)
-
-          if [[ ! -f "$PKG_FILE" ]]; then
-            echo "ERROR: Package not created!"
-            exit 1
-          fi
-
-          mkdir -p pacman-repo
-          cp "$PKG_FILE" pacman-repo/
-          echo "pkg_file=$PWD/$PKG_FILE" >> $GITHUB_OUTPUT
-
-      - name: Package Linux release tarball
-        run: |
-          VERSION_WITH_REL="${{ steps.prepare_package.outputs.version_with_rel }}"
-          PKG_ARCH="${{ steps.prepare_package.outputs.pkg_arch }}"
-          tar -czvf "batocode-arcade-${VERSION_WITH_REL}-${PKG_ARCH}-release.tar.gz" \
-            -C "${{ steps.prepare_package.outputs.pkg_root }}/userdata/roms/ports/batocode-arcade" .
-          echo "release_tarball=batocode-arcade-${VERSION_WITH_REL}-${PKG_ARCH}-release.tar.gz" >> $GITHUB_OUTPUT
-
-      - name: Upload Linux release tarball for ${{ matrix.arch }}
-        uses: actions/upload-artifact@v4
-        with:
-          name: release-tarball-${{ matrix.arch }}
-          path: batocode-arcade-*.tar.gz
-
-      - name: Upload pacman repo artifacts for this arch
-        uses: actions/upload-artifact@v4
-        with:
-          name: pacman-repo-${{ matrix.arch }}
-          path: pacman-repo/*
+  build-linux:
+    needs: prepare-version
+    uses: ./.github/workflows/build-linux.yml
+    with:
+      version: ${{ needs.prepare-version.outputs.version }}
 
   publish-release:
     needs: build-linux
@@ -183,20 +51,20 @@ jobs:
       - name: Download pacman-repo artifacts from all archs
         uses: actions/download-artifact@v4
         with:
-          pattern: pacman-repo-*
+          pattern: pacman-pkg-*
           path: ./pacman-repo
           merge-multiple: false
 
       - name: Prepare per-arch repo-db directories
         run: |
           set -e
-          mkdir -p repo-db-aarch64 repo-db-x86_64
-          cp pacman-repo/pacman-repo-aarch64/*.pkg.tar.zst repo-db-aarch64/
-          cp pacman-repo/pacman-repo-x86_64/*.pkg.tar.zst repo-db-x86_64/
+          mkdir -p aarch64 x86_64
+          cp pacman-repo/aarch64/*.pkg.tar.zst aarch64/
+          cp pacman-repo/x86_64/*.pkg.tar.zst x86_64/
 
       - name: Re-create repo-add database for aarch64
         run: |
-          cd repo-db-aarch64
+          cd aarch64
           rm -f *.db* *.files*
           docker run --rm -v "$PWD":/repo -w /repo archlinux:latest \
             bash -c "repo-add batocode-arcade.db.tar.gz *.pkg.tar.zst"
@@ -206,7 +74,7 @@ jobs:
 
       - name: Re-create repo-add database for x86_64
         run: |
-          cd repo-db-x86_64
+          cd x86_64
           rm -f *.db* *.files*
           docker run --rm -v "$PWD":/repo -w /repo archlinux:latest \
             bash -c "repo-add batocode-arcade.db.tar.gz *.pkg.tar.zst"
@@ -219,8 +87,8 @@ jobs:
         with:
           name: pacman-repo-final
           path: |
-            repo-db-aarch64/*
-            repo-db-x86_64/*
+            aarch64/*
+            x86_64/*
 
   deploy-repo:
     needs: update-repo-db
@@ -231,11 +99,6 @@ jobs:
         with:
           name: pacman-repo-final
           path: ./pacman-repo
-
-      - name: Add .nojekyll to both repos
-        run: |
-          touch ./pacman-repo/repo-db-aarch64/.nojekyll
-          touch ./pacman-repo/repo-db-x86_64/.nojekyll
 
       - name: Deploy Pacman Repos to GitHub Pages (per-arch folders)
         uses: peaceiris/actions-gh-pages@v4
