--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -69,15 +69,25 @@ jobs:
         id: create_pacman_pkg
         run: |
           set -e
+
+          echo "PKG_ROOT = ${{ steps.prepare_package.outputs.pkg_root }}"
           PKG_ROOT="${{ steps.prepare_package.outputs.pkg_root }}"
-          chmod +x pkgbuild/scripts/batocera-makepkg.sh
+          SCRIPT_PATH="${GITHUB_WORKSPACE}/pkgbuild/scripts/batocera-makepkg.sh"
 
-          pushd "$PKG_ROOT"
-          bash "${GITHUB_WORKSPACE}/pkgbuild/scripts/batocera-makepkg.sh"
-          popd
+          if [[ ! -d "$PKG_ROOT" ]]; then
+            echo "ERROR: PKG_ROOT does not exist: $PKG_ROOT"
+            exit 1
+          fi
 
-          # Package is created one level up from $PKG_ROOT
-          PKG_FILE=$(find .. -maxdepth 1 -name "ports-batocode-arcade-*.pkg.tar.zst" | head -n1)
+          if [[ ! -f "$SCRIPT_PATH" ]]; then
+            echo "ERROR: Script not found: $SCRIPT_PATH"
+            exit 1
+          fi
+
+          chmod +x "$SCRIPT_PATH"
+          bash "$SCRIPT_PATH" "$PKG_ROOT"
+
+          PKG_FILE=$(find "$GITHUB_WORKSPACE" -maxdepth 1 -name "ports-batocode-arcade-*.pkg.tar.zst" | head -n1)
 
           if [[ ! -f "$PKG_FILE" ]]; then
             echo "ERROR: Package not created!"
