--- a/.github/actions/prepare-pkg/action.yml
+++ b/.github/actions/prepare-pkg/action.yml
@@ -17,6 +17,7 @@ outputs:
     value: ${{ steps.prepare.outputs.version_with_rel }}
 runs:
   using: "composite"
+  id: prepare
   steps:
     - run: |
         set -e
