--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Download pacman-repo artifacts from all archs
         uses: actions/download-artifact@v4
         with:
-          pattern: pacman-pkg-*
+          pattern: '*'
           path: ./pacman-repo
           merge-multiple: false
 
